--- a/UsingSongGetter/MainWindow.resx
+++ b/UsingSongGetter/MainWindow.resx
@@ -117,4 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAGRkQAAEABABcAgAAFgAAACgAAAAZAAAAMgAAAAEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAC5gCkA8fDsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIiIiIiEREREiIiIiIAAAACIiIiERERERESIiIiAAAAAiIiERERERERERIiIgAAAAIiIRERER
+        ERERERIiIAAAACIhERERERERERERIiAAAAAiEREAAAERAAAAERIgAAAAIhEQAAAAEAAAAAESIAAAACER
+        ERERABABERABESAAAAAhEREREQAQAREQAREgAAAAEREREREAEAEREAEREAAAABERERERABABERABERAA
+        AAAREREREQAQAREQAREQAAAAEREQAAAAEAEQAAEREAAAABERAAAAARABEAARERAAAAAREQAREREQARER
+        EREQAAAAEREAEREREAEREREREAAAACERABERERABERERESAAAAAhEQAREREQAREREREgAAAAIhEAERER
+        EAERERESIAAAACIRAAAAABAAAAABEiAAAAAiIRAAAAARAAAAESIgAAAAIiIRERERERERERIiIAAAACIi
+        IREREREREREiIiAAAAAiIiIhEREREREiIiIgAAAAIiIiIiEREREiIiIiIAAAAP+A/4D+AD+A+AAPgPAA
+        B4DgAAOAwAABgMAAAYCAAACAgAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAACAgAAAgMAA
+        AYDAAAGA4AADgPAAB4D4AA+A/gA/gP+A/4A=
+</value>
+  </data>
 </root>
